--- a/L4.1-conditionals.Rmd
+++ b/L4.1-conditionals.Rmd
@@ -14,7 +14,7 @@ source("knitr_setup.R")
 >
 > ### Suggested Readings
 >
-> * [Chapters 9.2 - 9.3](https://rstudio-education.github.io/hopr/programs.html#if-statements){target="_blank"} of "Hands-On Programming with R", by Garrett Grolemund
+> * [Chapters 9.2 - 9.3](https://rstudio-education.github.io/hopr/programs.html#if-statements) of "Hands-On Programming with R", by Garrett Grolemund
 
 
 ---
