--- a/syllabus/communication-help.Rmd
+++ b/syllabus/communication-help.Rmd
@@ -1,8 +1,8 @@
-All course communication will be managed through [Slack](https://6574-s11-f19.slack.com/) - Sign up [**HERE**](https://join.slack.com/t/6574-s11-f19/shared_invite/enQtNzIxNzQ2OTU1MjAwLWZiYjFlOTlhMjAxNDEwMjQ0MDcwYmMxOTAyZGVhNWM4YzFhY2U2ZDIyYzMxZGQwYjMxNDBiYzMzNWRmZmQxMDY){target="_blank"}
+All course communication will be managed through [Slack](https://6574-s11-f19.slack.com/) - Sign up [**HERE**](https://join.slack.com/t/6574-s11-f19/shared_invite/enQtNzIxNzQ2OTU1MjAwLWZiYjFlOTlhMjAxNDEwMjQ0MDcwYmMxOTAyZGVhNWM4YzFhY2U2ZDIyYzMxZGQwYjMxNDBiYzMzNWRmZmQxMDY)
 
 **Please don't email the instructors** - just use Slack.
 
-> [Watch this 2-minute video for a quick summary of Slack](https://youtu.be/9RJZMSsH7-g){target="_blank"}
+> [Watch this 2-minute video for a quick summary of Slack](https://youtu.be/9RJZMSsH7-g)
 
 **You can use Slack to**:
 
