--- a/L2-programming-basics.Rmd
+++ b/L2-programming-basics.Rmd
@@ -14,7 +14,7 @@ source("knitr_setup.R")
 
 You can do a lot with the basic operators like `+`, `-`, and `*`, but to do more advanced calculations you're going to need to start using functions.^[Technically speaking, operators are functions in R: the addition operator `+` is a convenient way of calling the addition function `'+'()`. Thus `10+20` is equivalent to the function call `'+'(20, 30)`. Not surprisingly, no-one ever uses this version.]
 
-> [Watch this 1-minute video for a quick summary of **functions**](https://vimeo.com/220490105){target="_blank"}
+> [Watch this 1-minute video for a quick summary of **functions**](https://vimeo.com/220490105)
 
 
 R has a lot of very useful built-in functions. Suppose I wanted to take the square root of 225. The usual notation for this is $\sqrt{25}=5$, though sometimes you'll also see it written like this $25^{0.5} = 5$. This second way of writing it is kind of useful to "remind" you of the mathematical fact that "square root of $x$" is actually the same as "raising $x$ to the power of 0.5". And since we already know how to raise things to powers in R, we could do this:
@@ -58,7 +58,7 @@ When R executes this command, starts out by calculating the value of `abs(-8)`, 
 
 When we use a function to do something, we generally refer to this as **calling** the function. The values that we type into the function are referred to as the **arguments** of that function. Some functions can have more than one argument.
 
-> [Watch this 1-minute video for a quick summary of **arguments**](https://vimeo.com/220490157){target="_blank"}
+> [Watch this 1-minute video for a quick summary of **arguments**](https://vimeo.com/220490157)
 
 
 ## Multiple arguments
@@ -105,10 +105,9 @@ objectName <- value
 
 where the arrow, `<-`, means "assign `value` to `objectName`".
 
-> [Watch this 1-minute video for a quick summary of **objects**](https://vimeo.com/220493412){target="_blank"}
+> [Watch this 1-minute video for a quick summary of **objects**](https://vimeo.com/220493412)
 
-
-The operator `<-` is a pain to type, so RStudio has a keyboard shortcut: Alt + - (the minus sign). RStudio offers many other handy [keyboard shortcuts](https://support.rstudio.com/hc/en-us/articles/200711853-Keyboard-Shortcuts){target="_blank"}. Also, Alt+Shift+K brings up a keyboard shortcut reference card.
+The operator `<-` is a pain to type, so RStudio has a keyboard shortcut: Alt + - (the minus sign). RStudio offers many other handy [keyboard shortcuts](https://support.rstudio.com/hc/en-us/articles/200711853-Keyboard-Shortcuts). Also, Alt+Shift+K brings up a keyboard shortcut reference card.
 
 To practice, try assigning `2` to `x`:
 
@@ -134,7 +133,7 @@ x
 
 ## Object names
 
-You can choose almost any name you like for an object, as long as the name does not begin with a *number* or a special character like `+`, `-`, `*`, `/`, `^`, `!`, `@`, or `&`. You will be wise to adopt a [convention for demarcating words](https://en.wikipedia.org/wiki/Camel_case){target="_blank"} in names. Here are a few:
+You can choose almost any name you like for an object, as long as the name does not begin with a *number* or a special character like `+`, `-`, `*`, `/`, `^`, `!`, `@`, or `&`. You will be wise to adopt a [convention for demarcating words](https://en.wikipedia.org/wiki/Camel_case) in names. Here are a few:
 
 - `snake_case_is_one_choice`
 - `other.people.use.periods`
@@ -319,7 +318,7 @@ In addition to the four main data types mentioned, there are a few additional "s
 
 When you start R, it only loads the "Base R" functions. But there are thousands and thousands of additional functions stored in **packages**.
 
-> [Watch this 1-minute video for a quick summary of **packages**](https://vimeo.com/220490447){target="_blank"}
+> [Watch this 1-minute video for a quick summary of **packages**](https://vimeo.com/220490447)
 
 There is a critical distinction that you need to understand, which is the difference between having a package **installed** on your computer, and having a package **loaded** in an R session. You only need to _install_ a package to your computer once, but you will need to _load_ it whenever you want to use it in any one R session. This relationship is illustrated in the image below:
 
@@ -339,7 +338,7 @@ library("packagename") # This works
 library(packagename)   # This also works
 ```
 
-As an example, try installing the [Wikifacts](https://github.com/keithmcnulty/wikifacts){target="_blank"} package, by Keith McNulty:
+As an example, try installing the [Wikifacts](https://github.com/keithmcnulty/wikifacts) package, by Keith McNulty:
 
 ```{r eval=FALSE}
 install.packages("wikifacts") # Remember - you only have to do this once!
@@ -355,7 +354,7 @@ wiki_randomfact()
 wiki_didyouknow()
 ```
 
-In case you're wondering, the only thing this package does is generate messages containing random facts from [Wikipedia](https://www.wikipedia.org/){target="_blank"}.
+In case you're wondering, the only thing this package does is generate messages containing random facts from [Wikipedia](https://www.wikipedia.org/).
 
 ---
 
